# Orchestra

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
.orch/: README.md
.orch/config/: orchestrator.toml  policies.toml
.orch/config/prompts/: claude-chat.md  claude-orchestrator.md  codex-integrator.md  codex-worker.md  gemini-critic.md  gemini-planner.md
.orch/schemas/: task.schema.json
docker/: orchestra-sandbox.Dockerfile
docs/: PLAN.md  RUNBOOK.md
examples/: task.example.yaml
orch/: __init__.py  chat.py  cli.py  config.py  dispatcher.py  doctor.py  gemini_sdk_runner.py  images.py  inbox.py  merge.py  model_wrapper.py  plans.py  review.py  runner.py  runtime.py  task_store.py  validate_task.py  worktree.py  wrapper_cli.py
tests/: test_chat.py  test_cli.py  test_config.py  test_dispatcher.py  test_doctor.py  test_gemini_sdk_runner.py  test_images.py  test_inbox.py  test_merge.py  test_model_wrapper.py  test_plans.py  test_review.py  test_runner.py  test_runtime.py  test_task_store.py  test_validate_task.py  test_worktree.py
