[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra"
version = "0.1.0"
description = "Local file-based multi-agent coding orchestrator."
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
    "PyYAML>=6.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
orch = "orch.cli:main"
orch-wrapper = "orch.wrapper_cli:main"
orch-gemini-planner = "orch.wrapper_cli:planner_main"
orch-gemini-critic = "orch.wrapper_cli:critic_main"
orch-codex-worker = "orch.wrapper_cli:worker_main"
orch-codex-integrator = "orch.wrapper_cli:integrator_main"

[tool.setuptools.packages.find]
include = ["orch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
